Improve citations and bibitem ordering for INCL and Geant4

--- a/poster.tex
+++ b/poster.tex
@@ -121,8 +121,8 @@
 
 %We discuss the status of INCL intra-nuclear cascade and ABLA fission/de-excitation codes
 %in the latest release of the detector simulation toolkit Geant4 9.2 \cite{pk09aCollaboration, pk08aProceedings}.
-In Geant4 9.2 \cite{pk09aCollaboration} 
-the INCL model is well established for targets heavier than Aluminium
+In Geant4 9.2 \cite{g4} 
+the INCL \cite{incl}  model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk08bProceedings}. 
 
 \vspace{1cm}
@@ -396,6 +396,7 @@ emission, and
 %{\Large
 %\addcontentsline{toc}{section}{References}
 \begin{thebibliography}{9}
+\bibitem{g4} \emph{Geant4 collaboration website} \\ {\tt http://\-cern.ch/\-geant4}
 \bibitem{incl} A. Boudard et al., \emph{Intranuclear cascade model for
     a comprehensive description of spallation reaction data}, Phys.
   Rev. C66 (2002) 044615
@@ -403,7 +404,6 @@ emission, and
 \bibitem{abla} J. Benlliure et al., \emph{Calculated nuclide
     production yields in relativistic collisions of fissile nuclei},
   Nuc. Phys. A628 (1998) 458
-\bibitem{g4} \emph{Geant4 collaboration website} \\ {\tt http://\-cern.ch/\-geant4}
 \bibitem{g4incl} \emph{Geant4 Physics Reference Manual: INCL~4.2 Cascade and ABLA~V3 Evaporation with Fission} 
 %\\ {\tt http://geant4.web.cern.ch/\-geant4/\-UserDocumentation/\-UsersGuides/\-PhysicsReferenceManual/\-html/\-node185.html}
 
