--- a/poster.tex
+++ b/poster.tex
@@ -220,14 +220,14 @@ The number of parameters is kept low in order to have as much
 \begin{textbox}
 \section*{{\Huge {\sf GEANT4 PHYSICS LISTS}}}
 
-An unique feature of {\sf Geant4} is to  
+A unique feature of {\sf Geant4} is to  
 \emph{decouple physics models, cross sections, and processes}
 using abstract interfaces, and manage the usage of different options with the physics lists.
 
 
 \begin{itemize}
 \item Users can run their simulation using different physics model
-configuration and compare the results.
+configurations and compare the results.
 {\color{udsect}
 \item Physics lists allow users to find good balance between various goals (e.g. CPU
 time requirements vs. accuracy of results).
