Added caption for figures

--- a/poster.tex
+++ b/poster.tex
@@ -302,6 +302,10 @@ these processes.
 %\includegraphics[scale=0.5]{images/zirkonium.eps}
 %\includegraphics[scale=0.5]{images/iron.eps}
 \includegraphics[scale=0.69]{images/aluminum.eps}
+{\Large {\sf {\linespread{1.0} Double-differential for neutron production cross section
+    from {\sf Geant4} {\sf INCL} and {\sf ABLA} models. Black and red histograms are the
+    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively. Blue data points are
+    from Ref.~\cite{data}.}}}
 \end{center}
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
