--- a/poster.tex
+++ b/poster.tex
@@ -124,8 +124,8 @@
 %We discuss the status of INCL intra-nuclear cascade and ABLA fission/de-excitation codes
 %in the latest release of the detector simulation toolkit {\sf Geant4 9.2} \cite{pk09aCollaboration, pk08aProceedings}.
 
-We have introduced INCL \cite{incl} model in {\sf Geant4 9.2} \cite{g4},
-which is well established for targets heavier than Aluminium
+We have introduced INCL \cite{incl} intra-nuclear cascade model in {\sf Geant4 9.2} \cite{g4}.
+The INCL model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk08bProceedings}. 
 
 \vspace{1cm}
