--- a/poster.tex
+++ b/poster.tex
@@ -322,7 +322,7 @@ So, \emph{{\sf INCL} can now be used with the {\sf Geant4} Fermi break-up model}
 }
 
 \vspace{1cm}
-Currently, cascade remnant nuclei lighter than A $<$ 13 are handled using Fermi break-up.
+Currently, cascade remnant nuclei lighter than A = 13 are handled using Fermi break-up.
 
 \end{textbox}
 
