Added caption for the fragment yield figs

--- a/poster.tex
+++ b/poster.tex
@@ -217,6 +217,7 @@ The number of parameters is kept low in order to have as much
 \end{textbox}
 \end{comment}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{0.8cm}
 \begin{textbox}
 \section*{{\Huge {\sf GEANT4 PHYSICS LISTS}}}
 
@@ -255,6 +256,7 @@ time requirements vs. accuracy of results).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\vspace{-5cm}
+\vspace{0.4cm}
 \begin{textbox}
 
 \section*{{\Huge {\sf  A NEW PHYSICS LIST}}}
@@ -284,9 +286,11 @@ these processes.
 
 \includegraphics[scale=0.70]{images/fragments.eps}
 
-\vspace{2cm}
+\vspace{1.5cm}
 %Isotope production:
 \includegraphics[scale=0.60]{images/pPbIsotopes.eps}
+{\Large {\sf {\linespread{1.0} Fragment production of the {\sf INCL} and {\sf ABLA} models. Black and red histograms are the
+    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively.}}}
 \end{center}
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -294,9 +298,9 @@ these processes.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\begin{textbox}
 
-\vspace{1cm}
+\vspace{0.5cm}
 \section*{{\Huge {\sf NEUTRON PRODUCTION}}}
-\vspace{-1cm}
+\vspace{-1.6cm}
 %Neutron production:
 \begin{center}
 %\includegraphics[scale=0.5]{images/zirkonium.eps}
