Use sf-style for the names of the codes

--- a/poster.tex
+++ b/poster.tex
@@ -124,13 +124,13 @@
 %We discuss the status of INCL intra-nuclear cascade and ABLA fission/de-excitation codes
 %in the latest release of the detector simulation toolkit {\sf Geant4 9.2} \cite{pk09aCollaboration, pk08aProceedings}.
 
-We have introduced INCL \cite{incl} intra-nuclear cascade model in {\sf Geant4 9.2} \cite{g4}.
-The INCL model is well established for targets heavier than Aluminium
+We have introduced {\sf INCL} \cite{incl} intra-nuclear cascade model in {\sf Geant4 9.2} \cite{g4}.
+The {\sf INCL} model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk08bProceedings}. 
 
 \vspace{1cm}
 {\color{udsect}
-We present a new {\sf Geant4} physics list, based on INCL and ABLA models, 
+We present a new {\sf Geant4} physics list, based on {\sf INCL} and {\sf ABLA} models, 
 prepared for nuclear physics applications
 in the domain dominated by spallation.
 }
@@ -268,9 +268,9 @@ spallation physics in mind.
 }
 
 \vspace{1cm}
-This list uses INCL/ABLA models for proton,
+This list uses {\sf INCL/ABLA} models for proton,
 neutron and pion inelastic interactions in the energy range 0 - 3
-GeV. In this energy range INCL/ABLA is \emph{the only model used} for the
+GeV. In this energy range {\sf INCL/ABLA} is \emph{the only model used} for the
 %aforementioned 
 these processes.
 
@@ -320,7 +320,7 @@ these processes.
 \section*{{\Huge {\sf LIGHT TARGETS}}}
 
 {\color{udsect}
-In order to choose between ABLA and Fermi break-up we have
+In order to choose between {\sf ABLA} and Fermi break-up we have
 introduced a selection rule in the code. 
 So, \emph{{\sf INCL} can now be used with the {\sf Geant4} Fermi break-up model}.
 }
