--- a/poster.tex
+++ b/poster.tex
@@ -270,7 +270,9 @@ spallation physics in mind.
 \vspace{1cm}
 This list uses {\sf INCL/ABLA} models for proton,
 neutron and pion inelastic interactions in the energy range 0 - 3
-GeV. In this energy range {\sf INCL/ABLA} is \emph{the only model used} for the
+GeV.
+\vskip1cm
+In this energy range {\sf INCL/ABLA} is the only model used for the
 %aforementioned 
 these processes.
 
@@ -278,7 +280,7 @@ these processes.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\begin{textbox}
-\vspace{4cm}
+\vspace{2cm}
 \section*{{\Huge {\sf FRAGMENT YIELD}}}
 \vspace{-1cm}
 %Fragments produced in reaction: p(1 GeV) + Pb
@@ -289,7 +291,7 @@ these processes.
 \vspace{1.5cm}
 %Isotope production:
 \includegraphics[scale=0.60]{images/pPbIsotopes.eps}
-{\Large {\sf {\linespread{1.0} Fragment production of the {\sf INCL} and {\sf ABLA} models. Black and red histograms are the
+{\Large {\sf {\linespread{1.0} Fragment production of the {\sf INCL} and {\sf ABLA} \cite{abla} models. Black and red histograms are the
     results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively.}}}
 \end{center}
 %\end{textbox}
@@ -308,7 +310,7 @@ these processes.
 \includegraphics[scale=0.69]{images/aluminum.eps}
 {\Large {\sf {\linespread{1.0} Double-differential for neutron production cross section
     from {\sf Geant4} {\sf INCL} and {\sf ABLA} models. Black and red histograms are the
-    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively. Blue data points are
+    results from the original {\sf FORTRAN} version and new {\sf C++} implementation, respectively. Data points are
     from Ref.~\cite{data}.}}}
 \end{center}
 %\end{textbox}
